--- a/.github/workflows/Deploy backend to host.yml
+++ b/.github/workflows/Deploy backend to host.yml
@@ -18,7 +18,7 @@ jobs:
          distribution: 'adopt'
      -
        name: run maven
-     run: |
+       run: |
          mvn clean install -DskipTests -B
          mkdir -p target/dependency && (cd target/dependency; unzip ../*.jar)
 
@@ -31,24 +31,24 @@ jobs:
     
      -
        name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
+       uses: docker/login-action@v2
+       with:
           username: ${{ secrest.DOCKER_HUB_USERNAME}}
           password: ${{ secrest.DOCKER_HUB_TOKEN}}
       -
-        name: prepare the docker-compose run
-        run: |
+       name: prepare the docker-compose run
+       run: |
               ls -l
       -
-        name: Build and push 
-        uses: docker/build-push-action@v4
+       name: Build and push 
+       uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tage: peterjie/234-deploylab-fronted:latest
+          tags: peterjie/234-deploylab-fronted:latest
       -
-        name: copy file via ssh password
-        uses: appleboy/scp-action@v0.1.4 
+       name: copy file via ssh password
+       uses: appleboy/scp-action@v0.1.4 
         with:
           host: ${{secrets.HOST_SERVER}}
           username: ${{ secrets.HOST_USER_NAME }}
@@ -57,8 +57,8 @@ jobs:
           source: "docker-compose.yml"
           target: "/home/ubuntu/backend"
       -
-        name:   docker compose
-        uses: appleboy/ssh-action@v0.1.10
+       name:   docker compose
+       uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{secrets.HOST_SERVER}}
           username: ${{secrets.HOST_USER_NAME }}
